fixed dialogue misalignment due to font size

--- a/scenes/05-beach-explore/styles.css
+++ b/scenes/05-beach-explore/styles.css
@@ -122,7 +122,7 @@ body {
 
 #subtitles {
   height: 128px;
-  font-size: 40px;
+  font-size: 32px;
   color: black;
 }
 
