--- a/scenes/08-jungle-explore/styles.css
+++ b/scenes/08-jungle-explore/styles.css
@@ -126,7 +126,7 @@ body {
 
 #subtitles {
   height: 128px;
-  font-size: 40px;
+  font-size: 32px;
   color: black;
 }
 
