--- a/scenes/11-explore/styles.css
+++ b/scenes/11-explore/styles.css
@@ -144,7 +144,7 @@ body {
 
 #subtitles {
   height: 128px;
-  font-size: 40px;
+  font-size: 32px;
   color: black;
 }
 
